# list-files-folder

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SPEC.md
src/: app.rs  csv_export.rs  document_parser.rs  file_scanner.rs  lib.rs  main.rs
