[package]
name = "list-file-in-folders"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.33"
egui_extras = { version = "0.33", features = ["all_loaders"] }
rfd = "0.15"
csv = "1.4"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "bmp", "ico", "webp"] }

# Windows: hide console window in release builds
[profile.release]
opt-level = "z"
lto = true
strip = true
