[package]
name = "list-file-in-folders"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.33"
egui_extras = { version = "0.33", features = ["all_loaders"] }
rfd = "0.15"
csv = "1.4"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "bmp", "ico", "webp"] }
pdfium-render = "0.8"
dirs = "5.0"
ureq = "2.9"
zip = "0.6"
open = "5.0"
flate2 = "1.0"
tar = "0.4"
dotext = "0.1"
calamine = "0.26"
encoding_rs = "0.8"
symphonia = { version = "0.5", default-features = false, features = ["mp3", "aac", "ogg", "flac", "wav"] }

# Windows: hide console window in release builds
[profile.release]
opt-level = "z"
lto = true
strip = true
